refactor: se hicieron refactorizaciones pequeñas para eliminar code smells